tests/whiley/valid/test_200.wyal
define f_requires_0(int x) is:
    x != 0


define f_ensures_0(int x, int r) is:
    r != 1


assert "postcondition not satisfied":
    forall(int x):
        if:
            f_requires_0(x)
        then:
            f_ensures_0(x, x + 1)


