tests/whiley/invalid/test_62.wyal
define f_requires_0(int x) is:
    x != 0


define f_ensures_0(int x, int y) is:
    y != 1


assert "postcondition not satisfied":
    forall(int x):
        if:
            f_requires_0(x)
        then:
            f_ensures_0(x, x)


